// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Alert > snapshot: type=error 1`] = `
<div
  class="ucl-uikit-alert css-1bgvdmk"
  data-testid="ucl-uikit-alert"
  role="alert"
>
  <svg
    class="ucl-icon css-nysdxe"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="15"
      x2="9"
      y1="9"
      y2="15"
    />
    <line
      x1="9"
      x2="15"
      y1="9"
      y2="15"
    />
  </svg>
  <div>
    <h3
      class="css-1ybx1vr"
      data-test-id="ucl-uikit-alert__title"
    >
      Error Alert
    </h3>
    <p
      class="css-omeh0l ucl-uikit-alert__message"
      data-testid="ucl-uikit-alert__message"
    >
      The operation failed.
    </p>
  </div>
</div>
`;

exports[`Alert > snapshot: type=info, no title 1`] = `
<div
  class="ucl-uikit-alert css-1rd5b6h"
  data-testid="ucl-uikit-alert"
  role="alert"
>
  <svg
    class="ucl-icon css-1oh4ubr"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <circle
      cx="12"
      cy="12"
      r="10"
    />
    <line
      x1="12"
      x2="12"
      y1="16"
      y2="12"
    />
    <line
      x1="12"
      x2="12.01"
      y1="8"
      y2="8"
    />
  </svg>
  <div>
    <p
      class="css-omeh0l ucl-uikit-alert__message"
      data-testid="ucl-uikit-alert__message"
    >
      This is an informational alert.
    </p>
  </div>
</div>
`;

exports[`Alert > snapshot: type=success 1`] = `
<div
  class="ucl-uikit-alert css-17ofdem"
  data-testid="ucl-uikit-alert"
  role="alert"
>
  <svg
    class="ucl-icon css-4xbsfp"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M22 11.08V12a10 10 0 1 1-5.93-9.14"
    />
    <polyline
      points="22 4 12 14.01 9 11.01"
    />
  </svg>
  <div>
    <h3
      class="css-1ybx1vr"
      data-test-id="ucl-uikit-alert__title"
    >
      Success
    </h3>
    <p
      class="css-omeh0l ucl-uikit-alert__message"
      data-testid="ucl-uikit-alert__message"
    >
      Your operation completed successfully.
    </p>
  </div>
</div>
`;

exports[`Alert > snapshot: type=warning 1`] = `
<div
  class="ucl-uikit-alert css-1whwjpp"
  data-testid="ucl-uikit-alert"
  role="alert"
>
  <svg
    class="ucl-icon css-dwkbnw"
    data-testid="ucl-icon"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M10.29 3.86L1.82 18a2 2 0 0 0 1.71 3h16.94a2 2 0 0 0 1.71-3L13.71 3.86a2 2 0 0 0-3.42 0z"
    />
    <line
      x1="12"
      x2="12"
      y1="9"
      y2="13"
    />
    <line
      x1="12"
      x2="12.01"
      y1="17"
      y2="17"
    />
  </svg>
  <div>
    <h3
      class="css-1ybx1vr"
      data-test-id="ucl-uikit-alert__title"
    >
      Warning
    </h3>
    <p
      class="css-omeh0l ucl-uikit-alert__message"
      data-testid="ucl-uikit-alert__message"
    >
      This operation may have unintended consequences.
    </p>
  </div>
</div>
`;
